deployment添加configmap映射 && 去掉服务自定义端口号，通过service做端口映射

--- a/bookstore-domain-payment/Dockerfile
+++ b/bookstore-domain-payment/Dockerfile
@@ -8,7 +8,6 @@ ENV GO111MODULE=on \
     PORT=8812
 
 COPY *.go ./
-COPY *.toml ./
 COPY go.mod go.sum ./
 RUN go mod tidy
 RUN CGO_ENABLED=0 go build -o bookstore-domain-payment *.go
@@ -21,6 +20,7 @@ RUN apk --no-cache add ca-certificates
 
 RUN mkdir /app
 WORKDIR /app
+COPY conf/*.toml conf/
 COPY --from=builder /app/bookstore-domain-payment .
 
 EXPOSE $PORT
