--- a/bookstore-kubernetes-manifests/payment-configmap.yml
+++ b/bookstore-kubernetes-manifests/payment-configmap.yml
@@ -9,7 +9,7 @@ data:
     host = "host.docker.internal"
     port = 3306
     user = "root"
-    password = ""
+    password = "12345678"
     database = "bookstore"
     
     [account.client]
