--- a/bookstore-kubernetes-manifests/warehouse-configmap.yml
+++ b/bookstore-kubernetes-manifests/warehouse-configmap.yml
@@ -9,5 +9,5 @@ data:
     host = "host.docker.internal"
     port = 3306
     user = "root"
-    password = ""
+    password = "12345678"
     database = "bookstore"
